Add Caliburn Micro

--- a/source/PaperPusher/PaperPusher/App.xaml
+++ b/source/PaperPusher/PaperPusher/App.xaml
@@ -1,9 +1,14 @@
 ﻿<Application x:Class="PaperPusher.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:PaperPusher"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:PaperPusher">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary>
+                    <local:ApplicationBootstrapper x:Key="bootstrapper" />
+                </ResourceDictionary>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
