--- a/source/PaperPusher/PaperPusher/Views/MainView.xaml
+++ b/source/PaperPusher/PaperPusher/Views/MainView.xaml
@@ -1,13 +1,14 @@
-﻿<UserControl x:Class="PaperPusher.Views.MainView"
+﻿<controls:MetroWindow x:Class="PaperPusher.Views.MainView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:PaperPusher.Views"
+             xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <StackPanel>
         <TextBox x:Name="Name" />
         <Button x:Name="ChangeName" Content="Change Name"/>
     </StackPanel>
-</UserControl>
+</controls:MetroWindow>
