--- a/source/PaperPusher/PaperPusher/Views/MainView.xaml
+++ b/source/PaperPusher/PaperPusher/Views/MainView.xaml
@@ -7,8 +7,42 @@
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel>
-        <TextBox x:Name="Name" />
-        <Button x:Name="ChangeName" Content="Change Name"/>
-    </StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="3*" />
+            <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
+        <TextBox x:Name="CurrentDirectory_FullName"
+                 Grid.Row="0" Grid.Column="0"
+                 IsReadOnly="True" />
+        <TextBox x:Name="SelectedCurrentFile_Name"
+                 Grid.Row="0" Grid.Column="1"
+                 IsReadOnly="True" />
+        <TextBox x:Name="TargetRootDirectory_FullName"
+                 Grid.Row="0" Grid.Column="2"
+                 IsReadOnly="True" />
+        <ListBox x:Name="CurrentFiles"
+                 Grid.Row="1" Grid.Column="0">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+        <Image x:Name="PreviewImage"
+               Grid.Row="1" Grid.Column="1" />
+        <ListBox x:Name="TargetDirectories"
+                 Grid.Row="1" Grid.Column="2">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}" />
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
+    </Grid>
 </controls:MetroWindow>
