--- a/source/PaperPusher/PaperPusher/App.xaml
+++ b/source/PaperPusher/PaperPusher/App.xaml
@@ -15,6 +15,8 @@
                 <!-- Accent and AppTheme setting -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+                <!-- Custom -->
+                <ResourceDictionary Source="/Style/DefaultStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
