--- a/source/PaperPusher/PaperPusher/Views/MainView.xaml
+++ b/source/PaperPusher/PaperPusher/Views/MainView.xaml
@@ -12,6 +12,7 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
@@ -54,5 +55,21 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
+        <DatePicker x:Name="DocumentDate"
+                    Grid.Row="2" Grid.Column="0" />
+        <TextBox x:Name="DocumentTitle"
+                 Grid.Row="2" Grid.Column="1" />
+        <Grid Grid.Row="2" Grid.Column="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Button x:Name="MoveDocument"
+                    Grid.Column="0"
+                    Content="Move" />
+            <Button x:Name="RenameAndMoveDocument"
+                    Grid.Column="1"
+                    Content="Rename and Move" />
+        </Grid>
     </Grid>
 </mahapps:MetroWindow>
