--- a/source/PaperPusher/PaperPusher/Views/NewFolderView.xaml
+++ b/source/PaperPusher/PaperPusher/Views/NewFolderView.xaml
@@ -3,11 +3,37 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:PaperPusher.Views"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel>
-        <TextBox x:Name="FolderName" />
-        <Button x:Name="MakeFolder" />
-    </StackPanel>
+             MinWidth="400"
+             d:DesignHeight="300" d:DesignWidth="400">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <GroupBox Header="New Folder"
+                  Grid.Row="0">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+
+                <Label Content="Folder Name:"
+                       Grid.Row="0" Grid.Column="0" />
+                <TextBox x:Name="FolderName"
+                         Grid.Row="0" Grid.Column="1" />
+            </Grid>
+        </GroupBox>
+        <StackPanel Grid.Row="1"
+                    Margin="4"
+                    Orientation="Horizontal">
+            <Button x:Name="CreateFolder" Content="Accept" Padding="10 6" IsDefault="True" />
+            <Button x:Name="TryClose" Content="Cancel" Padding="10 6" IsCancel="True" />
+        </StackPanel>
+    </Grid>
 </UserControl>
