--- a/source/PaperPusher/PaperPusher/Views/MainView.xaml
+++ b/source/PaperPusher/PaperPusher/Views/MainView.xaml
@@ -23,10 +23,6 @@
             <ColumnDefinition Width="3*" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <!--<TextBox x:Name="CurrentDirectory_FullName"
-                 Grid.Row="0" Grid.Column="0"
-                 IsReadOnly="True"
-                 FontSize="18" />-->
         <DockPanel Grid.Row="0" Grid.Column="0">
             <Button x:Name="ChooseSourceDirectory"
                     DockPanel.Dock="Right"
@@ -37,14 +33,20 @@
                      IsReadOnly="True"
                      FontSize="18" />
         </DockPanel>
-        <TextBox x:Name="SelectedCurrentFile_Name"
-                 Grid.Row="0" Grid.Column="1"
+        <Grid Grid.Row="0" Grid.Column="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBox x:Name="SelectedCurrentFile_Name"
+                 Grid.Column="0"
                  IsReadOnly="True"
                  FontSize="18" />
-        <!--<TextBox x:Name="TargetRootDirectory_FullName"
-                 Grid.Row="0" Grid.Column="2"
+            <TextBox x:Name="SelectedFilePageCount"
+                 Grid.Column="2"
                  IsReadOnly="True"
-                 FontSize="18" />-->
+                 FontSize="18" />
+        </Grid>
         <DockPanel Grid.Row="0" Grid.Column="2">
             <Button x:Name="ChooseTargetRootDirectory"
                     DockPanel.Dock="Right"
