--- a/source/PaperPusher/PaperPusher/Views/MainView.xaml
+++ b/source/PaperPusher/PaperPusher/Views/MainView.xaml
@@ -8,7 +8,7 @@
                      xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
                      mc:Ignorable="d"
                      BorderBrush="{DynamicResource AccentColorBrush}"
-                     BorderThickness="1"
+                     BorderThickness="2"
                      SaveWindowPosition="True"
                      WindowStartupLocation="CenterScreen"
                      d:DesignHeight="300" d:DesignWidth="300">
@@ -45,7 +45,8 @@
             <TextBox x:Name="SelectedFilePageCount"
                  Grid.Column="2"
                  IsReadOnly="True"
-                 FontSize="18" />
+                 FontSize="18"
+                     Margin="0 10 10 10 "/>
         </Grid>
         <DockPanel Grid.Row="0" Grid.Column="2">
             <Button x:Name="ChooseTargetRootDirectory"
@@ -96,6 +97,7 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
@@ -123,6 +125,16 @@
                     Margin="4"
                     FontSize="14"
                     Content="Create Directory" />
+            <Button x:Name="UndoLastOperation"
+                    Grid.Row="2" Grid.Column="0"
+                    Margin="4"
+                    FontSize="14"
+                    Content="Undo" />
+            <Button x:Name="RedoLastUndo"
+                    Grid.Row="2" Grid.Column="1"
+                    Margin="4"
+                    FontSize="14"
+                    Content="Redo" />
         </Grid>
     </Grid>
 </mahapps:MetroWindow>
