--- a/source/PaperPusher/PaperPusher/Views/MainView.xaml
+++ b/source/PaperPusher/PaperPusher/Views/MainView.xaml
@@ -37,16 +37,30 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <TextBox x:Name="SelectedSourceFile_Name"
                  Grid.Column="0"
                  IsReadOnly="True"
                  FontSize="18" />
-            <TextBox x:Name="SelectedFilePageCount"
+            <Button x:Name="ShowPreviousPage"
+                 Grid.Column="1"
+                 FontSize="18"
+                 Margin="0 10 10 10 ">
+                Previous Page
+            </Button>
+            <Button x:Name="ShowNextPage"
                  Grid.Column="2"
+                 FontSize="18"
+                 Margin="0 10 10 10 ">
+                Next Page
+            </Button>
+            <TextBox x:Name="PageCountDisplay"
+                 Grid.Column="3"
                  IsReadOnly="True"
                  FontSize="18"
-                     Margin="0 10 10 10 "/>
+                 Margin="0 10 10 10 "/>
         </Grid>
         <DockPanel Grid.Row="0" Grid.Column="2">
             <Button x:Name="ChooseTargetRootDirectory"
