--- a/source/PaperPusher/PaperPusher/Views/MainView.xaml
+++ b/source/PaperPusher/PaperPusher/Views/MainView.xaml
@@ -34,30 +34,62 @@
                      FontSize="18" />
         </DockPanel>
         <Grid Grid.Row="0" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
+            
             <TextBox x:Name="SelectedSourceFile_Name"
                  Grid.Column="0"
+                     Grid.Row="0"
+                     Grid.RowSpan="2"
                  IsReadOnly="True"
                  FontSize="18" />
             <Button x:Name="ShowPreviousPage"
                  Grid.Column="1"
+                    Grid.Row="0"
                  FontSize="18"
                  Margin="0 10 10 10 ">
                 Previous Page
             </Button>
             <Button x:Name="ShowNextPage"
                  Grid.Column="2"
+                    Grid.Row="0"
                  FontSize="18"
                  Margin="0 10 10 10 ">
                 Next Page
             </Button>
+            <Button x:Name="ResetSplit"
+                 Grid.Column="1"
+                    Grid.Row="1"
+                 FontSize="18"
+                 Margin="0 10 10 10 ">
+                Reset Split
+            </Button>
+            <Button x:Name="SplitToPreviousPage"
+                 Grid.Column="2"
+                    Grid.Row="1"
+                 FontSize="18"
+                 Margin="0 10 10 10 ">
+                Split to Previous
+            </Button>
+            <Button x:Name="SplitToCurrentPage"
+                 Grid.Column="3"
+                    Grid.Row="1"
+                 FontSize="18"
+                 Margin="0 10 10 10 ">
+                Split to Current
+            </Button>
             <TextBox x:Name="PageCountDisplay"
                  Grid.Column="3"
+                     Grid.Row="0"
                  IsReadOnly="True"
                  FontSize="18"
                  Margin="0 10 10 10 "/>
